# 02225-DRTS-Project

./: .gitignore  README.md  detailed_report.txt  main.py  makefile  objects.py  pyproject.toml  requirements.txt  resources.py  schedule_visualizer.py  schedulers.py  simulator.py  solution.csv  utils.py
conf/: README.md  default.yaml  experiment.yaml  experiment1.yaml  experiment10.yaml  experiment2.yaml  experiment3.yaml  experiment4.yaml  experiment5.yaml  experiment6.yaml  experiment7.yaml  experiment8.yaml  experiment9.yaml  log.yaml
notebooks/: filereading.ipynb  my.ipynb
results/1-tiny-test-case/: detailed_report.txt  detailed_reportOptimized.txt  solutionOptimized.csv
results/10-unschedulable-test-case/: detailed_report.txt  solution.csv
results/2-small-test-case/: detailed_report.txt  detailed_reportOptimized.txt  solution.csv  solutionOptimized.csv
results/3-medium-test-case/: detailed_report.txt  solution.csv
results/4-large-test-case/: detailed_report.txt  solution.csv
results/5-huge-test-case/: detailed_report.txt  solution.csv
results/6-gigantic-test-case/: detailed_report.txt  solution.csv
results/7-unschedulable-test-case/: detailed_report.txt  solution.csv
results/8-unschedulable-test-case/: detailed_report.txt  solution.csv
simsystem/: analysis_engine.py  analytical_tools.py  config_structure.py  input_model.py  input_parser.py  main.py  main_at.py  objects.py  output_generator.py  resources.py  schedule_visualizer.py  schedulers.py  simulator.py  utility.py  utils.py
tests/: test_bdr_interface.py  test_dbf.py  test_input_model.py
(+6 files in other folders)
