[tool.poetry]
name = "simsystem"
version = "0.1.0"
description = "A project for distributed real-time systems."
authors = ["Author One <author.one@example.com>", "Author Two <author.two@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"