[tool.poetry]
name = "simsystem"
version = "1.0.0"
description = "Final project for distributed real-time systems."
authors = ["Markus Ngo", "Sebastian Hein Bitsch"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
matplotlib = "^3.7"
pandas = "^2.0"
hydra-core = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"